# gpu-bitcrack

./: .gitignore  AGENTS.md  BENCH.md  Cargo.toml  Makefile
.github/workflows/: rust.yml
bench/: sweep.sh
shaders/: hash160.wgsl  hits.wgsl  seq.wgsl  sha256.wgsl
src/: main.rs
tests/: integration_search.rs  wgsl.rs
